<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tagtest.drawer.ActivityLogin">
    <include layout="@layout/toolbar"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">
        <EditText
            android:id="@+id/user_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:hint="@string/account_text"
            android:maxLines="1"
            android:drawableLeft="@drawable/login_user_style"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/user_passwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:hint="@string/password_text"
            android:maxLines="1"
            android:drawableLeft="@drawable/login_passwd"
            android:inputType="textPassword"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
       >
        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"></View>
        <!--两个按钮放一个布局里会被判断为按钮栏，所以需要添加样式，取消其边框-->
        <Button
            android:id="@+id/user_register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/register_text"
            android:background="@drawable/login_button_style"
        />
        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"></View>
        <Button
            android:id="@+id/user_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/login_text"
            android:background="@drawable/login_button_style"/>
        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"></View>

    </LinearLayout>


</LinearLayout>
