<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tagtest.drawer.ActivityRegister">
    <include layout="@layout/toolbar"></include>
    <LinearLayout
        android:id="@+id/layout_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/toolbar">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/account_name"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal|center_vertical"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/register_account_name"
            android:maxLines="1"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_account_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout_account_name">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/account_password"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal|center_vertical"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/register_account_passwd"
            android:maxLines="1"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:inputType="textPassword"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout_account_password">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/account_passwd_repeat"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal|center_vertical"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/register_account_passwd_repeat"
            android:maxLines="1"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:inputType="textPassword"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_check_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout_password_repeat">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/account_sex"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal|center_vertical"/>
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:checkedButton="@id/checkbox_sex_man">
            <RadioButton
                android:id="@+id/checkbox_sex_man"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="男"/>
            <RadioButton
                android:id="@+id/checkbox_sex_woman"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="女"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/account_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_check_sex"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/account_question"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal|center_vertical"/>
            />
        <Spinner
            android:id="@+id/question_select"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:entries="@array/question"
            >
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_question"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/question_answer"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal|center_vertical"/>
        />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/account_question_answer"
            android:maxLines="2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"></View>
        <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/login_button_style"
            />
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"></View>

    </LinearLayout>
</RelativeLayout>
